kubernetes/apps/entertainment/pasta/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pasta
  namespace: entertainment
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pasta
  ports:
    - name: tcp
      protocol: TCP
      port: 80
      targetPort: 80
