kubernetes/apps/entertainment/pasta/app/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: pasta-backend
  namespace: entertainment
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pasta
  timeout:
    http:
      requestTimeout: 3600s
