kubernetes/apps/entertainment/pasta/app/httproute-envoy-test.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pasta-envoy
  namespace: entertainment
  annotations:
    external-dns.alpha.kubernetes.io/target: envoy.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Pasta (Envoy)
    gethomepage.dev/description: Plex Audio Management (Envoy test)
    gethomepage.dev/group: Entertainment
    gethomepage.dev/icon: mdi-noodles-#FFFFFF
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - pasta-envoy.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 3600s
        backendRequest: 3600s
      backendRefs:
        - name: pasta
          port: 80
