kubernetes/apps/entertainment/pasta/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pasta
  namespace: entertainment
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  tls:
    - hosts:
        - &host "pasta.${SECRET_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pasta
                port:
                  number: 80
